# arena-rush

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  ArenaRush.desktop.in  ArenaRush.rc  CMakeLists.txt  PKGBUILD  README.md  flake.nix  justfile  renderdoc.settings.cap
.github/: labeler.yml
.github/workflows/: build.yml  cmake-pr.yml  deploy-web.yml  format-check.yml  labeler.yml  opengl.yml  release.yml  static-analysis.yml
assets/fonts/GTASA_font/: GTASA_font.json
assets/gltf/drone/: arcade_corki.glb
assets/gltf/enemies/: shaco.glb
assets/gltf/map/: SpeedArenaUpdated.glb
assets/gltf/weapons/: deagle.glb  hunter.glb
assets/models/: scene.gltf
assets/shaders/: checkerboard.frag  color-mixer.frag  lit.frag  lit.vert  model.frag  model.vert  pbr.frag  pbr.vert  progress.frag  simple.frag  simple.vert  splatter.frag  splatter.vert  texture-test.frag  textured-gamma.frag  textured.frag  textured.vert  tinted.frag  tinted.vert  transform-test.vert  triangle.vert
assets/shaders/postprocess/: bloom-blur.frag  bloom-combine.frag  bloom-threshold.frag  chromatic-aberration.frag  dash-distortion.frag  vignette.frag
config/: app.jsonc
config/json-configs/: collision.jsonc  sound.jsonc
config/playgrounds/: animation-shaco.jsonc  animation-yummi.jsonc  animation.jsonc  collision.jsonc  extra-lights.jsonc  model.jsonc  sound.jsonc
docker/: Dockerfile.arch  Dockerfile.fedora
scripts/: run-all.ps1
src/: main.cpp
src/Shader/: Shader.cpp  Shader.h
src/common/: application.cpp  application.hpp  asset-loader.cpp  asset-loader.hpp  deserialize-utils.hpp  logger.hpp
src/common/animation/: animation.hpp  animator.hpp  bone.hpp  skeleton.cpp  skeleton.hpp
src/common/audio/: audio-buffer.hpp  audio-utils.cpp  audio-utils.hpp
src/common/components/: animation.cpp  animation.hpp  audio-source.cpp  audio-source.hpp  camera.cpp  camera.hpp  component-deserializer.hpp  free-camera-controller.cpp  free-camera-controller.hpp  light.cpp  light.hpp  mesh-renderer.cpp  mesh-renderer.hpp  model-renderer.cpp  model-renderer.hpp  movement.cpp  movement.hpp  post-process-effects.hpp
src/common/ecs/: component-registry.hpp  component.hpp  entity.cpp  entity.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
src/common/input/: joystick.hpp  keyboard.hpp  mouse.hpp
src/common/material/: material.cpp  material.hpp  pipeline-state.cpp  pipeline-state.hpp
src/common/mesh/: mesh-utils.cpp  mesh-utils.hpp  mesh.hpp  vertex.hpp
src/common/model/: ai-glm-utils.hpp  model-utils.cpp  model-utils.hpp  model.cpp  model.hpp
src/common/post-process/: bloom.cpp  bloom.hpp  framebuffer.hpp
src/common/shader/: shader.cpp  shader.hpp
src/common/systems/: animation-system.cpp  animation-system.hpp  audio-system.cpp  audio-system.hpp  forward-renderer.cpp  forward-renderer.hpp  free-camera-controller.hpp  movement.hpp  render-command.hpp  ui-renderer.hpp
src/common/text/: font.cpp  font.hpp  text-renderer.cpp  text-renderer.hpp
src/common/texture/: sampler.cpp  sampler.hpp  screenshot.cpp  screenshot.hpp  texture-utils.cpp  texture-utils.hpp  texture2d.hpp
src/common/uniform-buffer/: uniform-buffer.hpp
src/game/: game-registration.cpp  game-registration.hpp
src/game/components/: billboard.hpp  collider.cpp  collider.hpp  enemy.cpp  enemy.hpp  health.cpp  health.hpp  hit-marker.hpp  player-movement.cpp  player-movement.hpp  player.cpp  player.hpp  post-process-effects.hpp  projectile-trail.cpp  projectile-trail.hpp  projectile.cpp  projectile.hpp  trail-segment.hpp  weapon.cpp  weapon.hpp
src/game/systems/: billboard-system.hpp  collision-debug-drawer.cpp  collision-debug-drawer.hpp  collision-system.cpp  collision-system.hpp  crosshair-renderer.hpp  enemy-ai.hpp  enemy-health-bar.hpp  enemy-spawner.hpp  health-system.hpp  hit-marker-system.hpp  player-hud.cpp  player-hud.hpp  player-movement-system.cpp  player-movement-system.hpp  post-process-effects-system.hpp  projectile-system.hpp  trail-system.hpp  weapon-switcher-system.hpp  weapon-visual-system.hpp
src/game/ui/: play-overlay.hpp
src/states/: entity-test-state.hpp  loading-state.hpp  material-test-state.hpp  menu-layout.hpp  menu-state.hpp  mesh-test-state.hpp  pipeline-test-state.hpp  play-state.hpp  renderer-test-state.hpp  sampler-test-state.hpp  shader-test-state.hpp  texture-test-state.hpp  transform-test-state.hpp
web/: shell.html
web/include/glad/: gl.h
